[tool.poetry]
name = "flask-schema"
version = "0.1.0"
description = ""
authors = ["le_woudar <rollandkev@yahoo.fr>"]
readme = "README.md"
keywords = ["flask", "pydantic", "api", "validation", "schema"]
packages = [{include = "flask_schema"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
pydantic = "^2.5.3"
alchemical = "^1.0.1"

[tool.poetry.group.dev.dependencies]
httpie = "^3.2.2"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "I",   # isort
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "C90", # McCabe complexity
  "RUF"
]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
